# ymir/backend/src/ymir_viz/src/swagger/swagger.yaml
@@ -319,6 +319,8 @@ components:
         class_ids_count:
           type: object
           example: "{4:8, 5:2}"
+        total_count:
+          type: integer
         ignored_labels:
           type: object
           example: "{cat:8}"
@@ -368,6 +370,8 @@ components:
     DatasetResult_result:
       type: object
       properties:
+        total_count:
+          type: integer
         class_ids_count:
           type: object
           example: "{4:8, 5:2}"
